force-app/main/default/objects/Account/fields/Account_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Company_Name__c</fullName>
    <description>Bisnode</description>
    <inlineHelpText>Updated by Bisnode</inlineHelpText>
    <label>Account Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>