force-app/main/default/objects/Account/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>Owner.FirstName &amp; &apos; &apos;&amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>