force-app/main/default/objects/Account/fields/Account_Owner_Alias__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Alias__c</fullName>
    <description>Not used</description>
    <formula>Owner.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Alias</label>
    <type>Text</type>
</CustomField>