force-app/main/default/objects/Account/fields/Account_Owner_is_Invoice_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_is_Invoice_Responsible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Owner is Invoice Responsible</label>
    <type>Checkbox</type>
</CustomField>