force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>CASE(
 AccountStatus2__c,
 &quot;Ongoing Termination&quot;, IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Ongoing Termination&quot;),
 &quot;Terminated&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Terminated&quot;),
 IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Active&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>