force-app/main/default/objects/Account/fields/Account_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Description__c</fullName>
    <formula>CASE(
AccountStatus2__c,
&quot;Active&quot;,&quot;OK&quot;,
&quot;Terminated&quot;,&quot;Terminated&quot;,
IF(
AND(
Red_Flag__c,!ISPICKVAL(ApprovalStatus__c,&quot;Overdue&quot;),!Late_payment__c,ISBLANK(Termination_date__c),ISPICKVAL(Reason_for_termination__c,&quot;&quot;)
),
&quot;RedFlag&quot;,
IF(
AND(
Red_Flag__c,ISPICKVAL(ApprovalStatus__c,&quot;Overdue&quot;),!Late_payment__c,ISBLANK(Termination_date__c),ISPICKVAL(Reason_for_termination__c,&quot;&quot;)
),
&quot;RedFlag,KYC&quot;,
IF(
AND(
Red_Flag__c,ISPICKVAL(ApprovalStatus__c,&quot;Overdue&quot;),Late_payment__c,ISBLANK(Termination_date__c),ISPICKVAL(Reason_for_termination__c,&quot;&quot;)
),
&quot;RedFlag,KYC,LatePayment&quot;,
IF(
AND(
Red_Flag__c,ISPICKVAL(ApprovalStatus__c,&quot;Overdue&quot;),Late_payment__c,OR(!ISBLANK(Termination_date__c),!ISPICKVAL(Reason_for_termination__c,&quot;&quot;))
),
&quot;RedFlag,KYC,LatePayment,Terminated&quot;,
IF(
AND(
!Red_Flag__c,ISPICKVAL(ApprovalStatus__c,&quot;Overdue&quot;),!Late_payment__c,ISBLANK(Termination_date__c),ISPICKVAL(Reason_for_termination__c,&quot;&quot;)
),
&quot;KYC&quot;,
IF(
AND(
!Red_Flag__c,ISPICKVAL(ApprovalStatus__c,&quot;Overdue&quot;),Late_payment__c,ISBLANK(Termination_date__c),ISPICKVAL(Reason_for_termination__c,&quot;&quot;)
),
&quot;KYC,LatePayment&quot;,
IF(
AND(
!Red_Flag__c,ISPICKVAL(ApprovalStatus__c,&quot;Overdue&quot;),Late_payment__c,OR(!ISBLANK(Termination_date__c),!ISPICKVAL(Reason_for_termination__c,&quot;&quot;))
),
&quot;KYC,LatePayment,Terminated&quot;,
IF(
AND(
!Red_Flag__c,!ISPICKVAL(ApprovalStatus__c,&quot;Overdue&quot;),Late_payment__c,ISBLANK(Termination_date__c),ISPICKVAL(Reason_for_termination__c,&quot;&quot;)
),
&quot;LatePayment&quot;,
IF(
AND(
!Red_Flag__c,!ISPICKVAL(ApprovalStatus__c,&quot;Overdue&quot;),Late_payment__c,OR(!ISBLANK(Termination_date__c),!ISPICKVAL(Reason_for_termination__c,&quot;&quot;))
),
&quot;LatePayment,Terminated&quot;,
IF(
AND(
!Red_Flag__c,!ISPICKVAL(ApprovalStatus__c,&quot;Overdue&quot;),!Late_payment__c,OR(!ISBLANK(Termination_date__c),!ISPICKVAL(Reason_for_termination__c,&quot;&quot;))
),
&quot;Terminated&quot;,
IF(
AND(
Red_Flag__c,!ISPICKVAL(ApprovalStatus__c,&quot;Overdue&quot;),Late_payment__c,ISBLANK(Termination_date__c),ISPICKVAL(Reason_for_termination__c,&quot;&quot;)
),
&quot;RedFlag,LatePayment&quot;,
IF(
AND(
Red_Flag__c,!ISPICKVAL(ApprovalStatus__c,&quot;Overdue&quot;),!Late_payment__c,OR(!ISBLANK(Termination_date__c),!ISPICKVAL(Reason_for_termination__c,&quot;&quot;))
),
&quot;RedFlag,Terminated&quot;,
IF(
AND(
!Red_Flag__c,ISPICKVAL(ApprovalStatus__c,&quot;Overdue&quot;),!Late_payment__c,OR(!ISBLANK(Termination_date__c),!ISPICKVAL(Reason_for_termination__c,&quot;&quot;))
),
&quot;KYC,Terminated&quot;,
IF(
AND(
Red_Flag__c,!ISPICKVAL(ApprovalStatus__c,&quot;Overdue&quot;),Late_payment__c,OR(!ISBLANK(Termination_date__c),!ISPICKVAL(Reason_for_termination__c,&quot;&quot;))
),
&quot;RedFlag,LatePayment,Terminated&quot;,
&quot;&quot;
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Status Description</label>
    <type>Text</type>
</CustomField>