force-app/main/default/objects/Account/fields/Accountec_UUID__c.field-meta.xml
<CustomField>
    <fullName>Accountec_UUID__c</fullName>
    <label>Accountec UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>