force-app/main/default/objects/Account/fields/Accounting_Channel_URL__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Channel_URL__c</fullName>
    <label>Accounting Channel URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>