force-app/main/default/objects/Account/fields/AccountStatus2__c.field-meta.xml
<CustomField>
    <fullName>AccountStatus2__c</fullName>
    <description>Field used to show the Account Status value.</description>
    <formula>IF(
OR(
Red_Flag__c = TRUE,
ISPICKVAL(ApprovalStatus__c, &quot;Overdue&quot;),
Late_payment__c = TRUE
),
&quot;Ongoing Termination&quot;,
IF(
OR(
ISPICKVAL(ApprovalStatus__c, &quot;Rejected&quot;),
Deactivated__c = TRUE
),
&quot;Terminated&quot;,
&quot;Active&quot;
)
)</formula>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>