force-app/main/default/objects/Account/fields/Additional_tasks_on_Contrakt_added__c.field-meta.xml
<CustomField>
    <fullName>Additional_tasks_on_Contrakt_added__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only if High risk, add task 526</inlineHelpText>
    <label>Additional tasks on Contrakt added</label>
    <type>Checkbox</type>
</CustomField>