force-app/main/default/objects/Account/fields/Assignment_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorized Accountant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_AR_del</relationshipName>
    <type>Lookup</type>
</CustomField>