force-app/main/default/objects/Account/fields/Auto_generated_project_email_address__c.field-meta.xml
<CustomField>
    <fullName>Auto_generated_project_email_address__c</fullName>
    <description>Trello task: #221</description>
    <formula>IF(
ISBLANK(Project_Number_Operational__c),
&quot;&quot;,
&quot;pn&quot; + Project_Number_Operational__c + &quot;@viewinvoice.cloud&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto-generated email address</label>
    <type>Text</type>
</CustomField>