force-app/main/default/objects/Account/fields/Beneficial_owners_in_high_risk_count__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_owners_in_high_risk_count__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KYC</description>
    <inlineHelpText>If one or more beneficial owners are residing in a high-risk country. For updated information/definition regarding beneficial owners and high-risk countries, see “Hvitvaskingsrutinen” 5.1.8</inlineHelpText>
    <label>Beneficial owners in high-risk count.</label>
    <type>Checkbox</type>
</CustomField>