force-app/main/default/objects/Account/fields/Billing_Account_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Project_Number__c</fullName>
    <formula>Billing_Account__r.Project_Number_Operational__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Account Project Number</label>
    <type>Text</type>
</CustomField>