force-app/main/default/objects/Account/fields/Bisnode_Worksite_Email__c.field-meta.xml
<CustomField>
    <fullName>Bisnode_Worksite_Email__c</fullName>
    <label>Bisnode - Worksite Email</label>
    <type>Email</type>
</CustomField>