force-app/main/default/objects/Account/fields/Business_Area__c.field-meta.xml
<CustomField>
    <fullName>Business_Area__c</fullName>
    <label>Business Area</label>
    <length>50</length>
    <type>Text</type>
</CustomField>