force-app/main/default/objects/Account/fields/Bypass_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to bypass validation rule in process builder process for updating Oppdragsansvarlig and Account Owner (KA)</description>
    <label>Bypass Validation Rule</label>
    <type>Checkbox</type>
</CustomField>