force-app/main/default/objects/Account/fields/Case_Invoicable_Flow__c.field-meta.xml
<CustomField>
    <fullName>Case_Invoicable_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not in use, to be deleted.</description>
    <label>Case Invoicable (Case Flow)</label>
    <type>Checkbox</type>
</CustomField>