force-app/main/default/objects/Account/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <inlineHelpText>General info on status</inlineHelpText>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>