force-app/main/default/objects/Account/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AB</fullName>
            </value>
            <value>
                <fullName>AS</fullName>
            </value>
            <value>
                <fullName>ANS</fullName>
            </value>
            <value>
                <fullName>ASA</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>BRL</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
            <value>
                <fullName>ENK</fullName>
            </value>
            <value>
                <fullName>ESEK</fullName>
            </value>
            <value>
                <fullName>FLI</fullName>
            </value>
            <value>
                <fullName>HB</fullName>
            </value>
            <value>
                <fullName>IKS</fullName>
            </value>
            <value>
                <fullName>KBO</fullName>
            </value>
            <value>
                <fullName>KS</fullName>
            </value>
            <value>
                <fullName>KTRF</fullName>
            </value>
            <value>
                <fullName>NUF</fullName>
            </value>
            <value>
                <fullName>ORGL</fullName>
            </value>
            <value>
                <fullName>PRE</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>SAM</fullName>
            </value>
            <value>
                <fullName>SF</fullName>
            </value>
            <value>
                <fullName>STI</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
            </value>
            <value>
                <fullName>BRF</fullName>
            </value>
            <value>
                <fullName>EF</fullName>
            </value>
            <value>
                <fullName>Enkelt bolag</fullName>
            </value>
            <value>
                <fullName>Enskild firma</fullName>
            </value>
            <value>
                <fullName>Ekonomisk förening</fullName>
            </value>
            <value>
                <fullName>Filial</fullName>
            </value>
            <value>
                <fullName>Ideell Förening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>