force-app/main/default/objects/Account/fields/Complex_ownership_and_control_structure__c.field-meta.xml
<CustomField>
    <fullName>Complex_ownership_and_control_structure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KYC</description>
    <inlineHelpText>Does the customer or any related companies have a complex ownership and/or control structure? Indications for complex ownership and/or control structure could be (but is not limited to):
•	Several different levels in ownership/control
•	Relationship between owners and control
•	Lack of explanatory internal routines
•	Irregular transactions between owners
•	Complex group transfers</inlineHelpText>
    <label>Complex ownership and control structure?</label>
    <type>Checkbox</type>
</CustomField>