force-app/main/default/objects/Account/fields/Contract_Start_Date_Impl__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date_Impl__c</fullName>
    <description>Used in XLedger integration Not used</description>
    <label>Contract Start Date (Impl.)</label>
    <type>Date</type>
</CustomField>