force-app/main/default/objects/Account/fields/Contract_Start_Date_Oper__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date_Oper__c</fullName>
    <description>Used in XLedger integration Not used</description>
    <label>Contract Start Date (Oper.)</label>
    <type>Date</type>
</CustomField>