force-app/main/default/objects/Account/fields/Cost_Center_Code__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_Code__c</fullName>
    <formula>Case(Cost_Center__c,

&quot;01 Oslo Felles&quot;,&quot;VL-01 Oslo&quot;,
&quot;02 Fagteam Xledger Oslo&quot;,&quot;VL-02&quot;,
&quot;03 Fagteam Tripletex Oslo&quot;,&quot;VL-03&quot;,
&quot;04 Fagteam Lønn/HR Oslo&quot;,&quot;VL-04&quot;,
&quot;05 Advisory Oslo&quot;,&quot;VL-05&quot;,
&quot;06 Ålesund&quot;,&quot;VL-06&quot;,
&quot;07 Bergen&quot;,&quot;VL-07 &quot;,
&quot;10 System Sweden&quot;,&quot;10&quot;,
&quot;11 Stockholm Team 1&quot;,&quot;11&quot;,
&quot;11 Maritime&quot;,&quot;VM-11&quot;,
&quot;12 Haugesund&quot;,&quot;VL-12&quot;,
&quot;12 Stockholm Team 2&quot;,&quot;12&quot;,
&quot;13 Stockholm Team 3&quot;,&quot;13&quot;,
&quot;14 Søgne&quot;,&quot;VL-14&quot;,
&quot;14 Stockholm Team 4&quot;,&quot;14&quot;,
&quot;15 Kristiansand&quot;,&quot;VL-15&quot;,
&quot;15 Stockholm Team 5&quot;,&quot;15&quot;,
&quot;16 Lillehammer&quot;,&quot;VL-16&quot;,
&quot;16 Stockholm Avdelingschef&quot;,&quot;16&quot;,
&quot;171 Stavanger Xledger&quot;,&quot;VL-171 &quot;,
&quot;172 Stavanger Tripletex&quot;,&quot;VL-172 &quot;,
&quot;18 Family Office&quot;,&quot;VT-18 FO&quot;,
&quot;18 Foreign Companies&quot;,&quot;VT-18 FC&quot;,
&quot;19 Sandefjord&quot;,&quot;VL-19&quot;,
&quot;20 Stockholm Externa&quot;,&quot;20&quot;,
&quot;21 Fagteam Xledger 2&quot;,&quot;VL-21&quot;,
&quot;22 Construct&quot;,&quot;VL-22&quot;,
&quot;23 Stockholm Advisory&quot;,&quot;23&quot;,
&quot;23 ØKR AS&quot;,&quot;VL-23&quot;,
&quot;24 Procurator&quot;,&quot;VP-24&quot;,
&quot;25 Kristiansand Pluss&quot;,&quot;VL-25&quot;,
&quot;30 Stockholm Ägar&quot;,&quot;30&quot;,
&quot;31 Malmo&quot;,&quot;31&quot;,
&quot;40 Stockholm Lön&quot;,&quot;40&quot;,
&quot;50 Kalmar T1 Löpande&quot;,&quot;50&quot;,
&quot;51 Kalmar T2 Bokslut&quot;,&quot;51&quot;,
&quot;52 Kalmar Manager&quot;,&quot;52&quot;,
&quot;51 Falkenberg&quot;,&quot;51&quot;,
&quot;60 Stockholm VTI&quot;,&quot;60&quot;,
&quot;60 VTI&quot;,&quot;VL-60&quot;,
&quot;70 Salg&quot;,&quot;VL-70 &quot;,
&quot;70 Stockholm Salg&quot;,&quot;70&quot;,
&quot;90 Overhead&quot;,&quot;VL-90 OH&quot;,


&quot;Missing code&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Center Code</label>
    <type>Text</type>
</CustomField>