force-app/main/default/objects/Account/fields/Create_Case__c.field-meta.xml
<CustomField>
    <fullName>Create_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used to trigger process to create Case records.</description>
    <label>Create Case</label>
    <type>Checkbox</type>
</CustomField>