force-app/main/default/objects/Account/fields/Create_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Create_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used to trigger process to create Opportunity records.</description>
    <label>Create Opportunity</label>
    <type>Checkbox</type>
</CustomField>