force-app/main/default/objects/Account/fields/CreateCalloutAPI__c.field-meta.xml
<CustomField>
    <fullName>CreateCalloutAPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreateCalloutAPI</label>
    <type>Checkbox</type>
</CustomField>