force-app/main/default/objects/Account/fields/Credit_rating__c.field-meta.xml
<CustomField>
    <fullName>Credit_rating__c</fullName>
    <label>Credit rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAA</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>AN</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>