force-app/main/default/objects/Account/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <inlineHelpText>Kundegruppe</inlineHelpText>
    <label>Customer Group</label>
    <length>128</length>
    <type>Text</type>
</CustomField>