force-app/main/default/objects/Account/fields/Customer_Value__c.field-meta.xml
<CustomField>
    <fullName>Customer_Value__c</fullName>
    <inlineHelpText>Customer Success follow-up based on customer value from A = High touch B = Low Touch C= Tech Touch</inlineHelpText>
    <label>Customer Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>