force-app/main/default/objects/Account/fields/CustomerChannelURL__c.field-meta.xml
<CustomField>
    <fullName>CustomerChannelURL__c</fullName>
    <label>Customer Channel URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>