force-app/main/default/objects/Account/fields/Customers_use_delegates__c.field-meta.xml
<CustomField>
    <fullName>Customers_use_delegates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KYC</description>
    <inlineHelpText>Has the customer other than general manager / Chairman of the Board with power of attorney rights.</inlineHelpText>
    <label>Customers use delegates?</label>
    <type>Checkbox</type>
</CustomField>