force-app/main/default/objects/Account/fields/Deactivated2__c.field-meta.xml
<CustomField>
    <fullName>Deactivated2__c</fullName>
    <description>This field is not in use, to be deleted.</description>
    <formula>IF(Termination_end_date__c  &gt; TODAY() , True, False)


/*IF(CONTAINS(AccountStatus2__c, &quot;Terminated&quot;), True, False)*/</formula>
    <label>Deactivated</label>
    <type>Checkbox</type>
</CustomField>