force-app/main/default/objects/Account/fields/Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivated</label>
    <type>Checkbox</type>
</CustomField>