force-app/main/default/objects/Account/fields/DeleteCalloutAPI__c.field-meta.xml
<CustomField>
    <fullName>DeleteCalloutAPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DeleteCalloutAPI</label>
    <type>Checkbox</type>
</CustomField>