force-app/main/default/objects/Account/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <description>Area of business</description>
    <label>Delivery</label>
    <length>50</length>
    <type>Text</type>
</CustomField>