force-app/main/default/objects/Account/fields/Description_Flow__c.field-meta.xml
<CustomField>
    <fullName>Description_Flow__c</fullName>
    <description>Not in use, to be deleted.</description>
    <label>Description (Flow)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>