force-app/main/default/objects/Account/fields/DESKSCMT__Desk_Migrated_Account__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Desk_Migrated_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desk Migrated Account</label>
    <type>Checkbox</type>
</CustomField>