force-app/main/default/objects/Account/fields/DevCore__Bisnode_Changed_Fields_Company__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Changed_Fields_Company__c</fullName>
    <label>Bisnode Changed Fields - Company</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>