force-app/main/default/objects/Account/fields/DevCore__Bisnode_Changed_Fields_Worksite__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Changed_Fields_Worksite__c</fullName>
    <label>Bisnode Changed Fields - Worksite</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>