force-app/main/default/objects/Account/fields/DevCore__Bisnode_Number_of_Employees_Value__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Number_of_Employees_Value__c</fullName>
    <label>Bisnode - Number of Employees (Estimate)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>