force-app/main/default/objects/Account/fields/DevCore__Bisnode_Worksite_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Worksite_Last_Modified_Date__c</fullName>
    <label>Bisnode - Worksite Last Modified Date</label>
    <type>DateTime</type>
</CustomField>