force-app/main/default/objects/Account/fields/DevCore__Bisnode_Worksite_Type__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Worksite_Type__c</fullName>
    <label>Bisnode Worksite Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>