force-app/main/default/objects/Account/fields/DevCore__BisnodeModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>DevCore__BisnodeModifiedDate__c</fullName>
    <label>Bisnode - Worksite Update Applied Date</label>
    <type>DateTime</type>
</CustomField>