force-app/main/default/objects/Account/fields/domains__c.field-meta.xml
<CustomField>
    <fullName>domains__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>Domains</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>