force-app/main/default/objects/Account/fields/ERP_Area_Case_Flow__c.field-meta.xml
<CustomField>
    <fullName>ERP_Area_Case_Flow__c</fullName>
    <description>Not in use, to be deleted.</description>
    <label>ERP Area (Case Flow)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ERP_Area</valueSetName>
    </valueSet>
</CustomField>