force-app/main/default/objects/Account/fields/ERP_Area_Flow__c.field-meta.xml
<CustomField>
    <fullName>ERP_Area_Flow__c</fullName>
    <description>Not in use, to be deleted.</description>
    <label>ERP Area (Case Flow)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>