force-app/main/default/objects/Account/fields/ERP_System__c.field-meta.xml
<CustomField>
    <fullName>ERP_System__c</fullName>
    <label>ERP System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>