force-app/main/default/objects/Account/fields/Field_UUID__c.field-meta.xml
<CustomField>
    <fullName>Field_UUID__c</fullName>
    <label>Field UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>