force-app/main/default/objects/Account/fields/File_Description_Case_Flow__c.field-meta.xml
<CustomField>
    <fullName>File_Description_Case_Flow__c</fullName>
    <description>Not in use, to be deleted.</description>
    <label>File Description (Case Flow)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>