force-app/main/default/objects/Account/fields/File_Names_Case_Flow__c.field-meta.xml
<CustomField>
    <fullName>File_Names_Case_Flow__c</fullName>
    <description>Not in use, to be deleted.</description>
    <label>File Names (Case Flow)</label>
    <type>TextArea</type>
</CustomField>