force-app/main/default/objects/Account/fields/Financial_Condition__c.field-meta.xml
<CustomField>
    <fullName>Financial_Condition__c</fullName>
    <description>The status of a firms assets, liabilities and equity positions</description>
    <label>Financial Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>